WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117371
REGRESSION(
r150633
): Find on page non-focused text highlight color is bright yellow.
https://bugs.webkit.org/show_bug.cgi?id=117371
Summary
REGRESSION(r150633): Find on page non-focused text highlight color is bright ...
Andreas Kling
Reported
2013-06-08 08:59:21 PDT
<
rdar://problem/14098882
>
Attachments
Patch
(4.00 KB, patch)
2013-06-10 09:30 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-06-10 09:30:54 PDT
Created
attachment 204169
[details]
Patch
WebKit Commit Bot
Comment 2
2013-06-10 14:36:57 PDT
Comment on
attachment 204169
[details]
Patch Clearing flags on attachment: 204169 Committed
r151404
: <
http://trac.webkit.org/changeset/151404
>
WebKit Commit Bot
Comment 3
2013-06-10 14:36:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug